<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sr_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/sr_header"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/start_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/serial_number_view"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/start_time_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start_date_header"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/end_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/serial_number_view"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/end_time_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/end_date_header"
        android:text="@string/end_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_work_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/total_work_time"
        android:text="@string/total_work_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_travel_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_travel_time"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:text="@string/total_travel_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_travel_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_work_time"
        android:layout_toRightOf="@+id/total_travel_header"
        android:text="@string/zero_hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/model_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/model_number_view"
        android:text="@string/model_number_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/serial_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/model_number_view"
        android:text="@string/serial_number_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/total_travel_time"
        android:text="@string/description_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/view_parts_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/view_comments_list"
        android:layout_alignBottom="@+id/view_comments_list"
        android:layout_alignParentRight="true"
        android:text="@string/parts" />

    <Button
        android:id="@+id/view_comments_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/daily_logs" />

    <TextView
        android:id="@+id/view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_header"
        android:text="@string/no_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/customer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/customer_view"
        android:text="@string/customer_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sr_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sr_number_view"
        android:layout_alignParentLeft="true"
        android:text="@string/sr_number_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/edit_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/view_comments_list"
        android:text="@string/today" />

    <TextView
        android:id="@+id/customer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sr_number_view"
        android:layout_toRightOf="@+id/total_travel_header"
        android:text="@string/unkown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/model_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_view"
        android:layout_toRightOf="@+id/total_travel_header"
        android:text="@string/unkown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_work_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_time_header"
        android:layout_toRightOf="@+id/total_travel_header"
        android:text="@string/zero_hours"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/serial_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/total_travel_header"
        android:layout_below="@+id/model_number_view"
        android:text="@string/unkown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>