<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/part_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/part_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/part_quantity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/part_number_view"
        android:text="@string/quantity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/part_used_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/part_source_header"
        android:text="@string/unused"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/part_source_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/part_quantity_header"
        android:text="@string/source"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/part_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/part_used_view"
        android:text="@string/no_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/part_source_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/part_used_view"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/part_quantity_header"
        android:text="@string/unkown"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/part_quantity_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/part_number_view"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/part_quantity_header"
        android:text="@string/unkown"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
